{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 16,
  "lineage": "ed74e7a9-9c92-6de4-2654-4fcdd7c8d35d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "debian_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04063f39f8c8cfbad",
            "arn": "arn:aws:ec2:us-east-1:286571561339:instance/i-0ee28842f4e3211c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee28842f4e3211c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "VExpenses-william-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f22e23a375ca0c53",
            "private_dns": "ip-10-0-1-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-44-200-238-6.compute-1.amazonaws.com",
            "public_ip": "44.200.238.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c84d097b8aa92b6",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c831c017ae7c1f9e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c71ce17a93ffbc4",
            "tags": {
              "Name": "VExpenses-william-ec2"
            },
            "tags_all": {
              "Name": "VExpenses-william-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c831c017ae7c1f9e"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.ec2_key_pair",
            "module.ec2.data.aws_ami.debian12",
            "module.security.aws_security_group.main_sg",
            "module.vpc.aws_subnet.main_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286571561339:security-group/sg-0c831c017ae7c1f9e",
            "description": "Permitir acesso SSH restrito por ip de origem e todo o trafego de saida",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c831c017ae7c1f9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "189.78.50.40/32"
                ],
                "description": "Allow SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VExpenses-william-sg",
            "name_prefix": "",
            "owner_id": "286571561339",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VExpenses-william-sg"
            },
            "tags_all": {
              "Name": "VExpenses-william-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099ff8a885e6d70d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286571561339:internet-gateway/igw-067a27014bdd47b0f",
            "id": "igw-067a27014bdd47b0f",
            "owner_id": "286571561339",
            "tags": {
              "Name": "VExpenses-william-igw"
            },
            "tags_all": {
              "Name": "VExpenses-william-igw"
            },
            "vpc_id": "vpc-099ff8a885e6d70d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286571561339:route-table/rtb-0797f4a28603a394c",
            "id": "rtb-0797f4a28603a394c",
            "owner_id": "286571561339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067a27014bdd47b0f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VExpenses-william-route_table"
            },
            "tags_all": {
              "Name": "VExpenses-william-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-099ff8a885e6d70d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041510e5338e7fb27",
            "route_table_id": "rtb-0797f4a28603a394c",
            "subnet_id": "subnet-05c71ce17a93ffbc4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.main_route_table",
            "module.vpc.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286571561339:subnet/subnet-05c71ce17a93ffbc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c71ce17a93ffbc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286571561339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VExpenses-william-subnet"
            },
            "tags_all": {
              "Name": "VExpenses-william-subnet"
            },
            "vpc_id": "vpc-099ff8a885e6d70d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286571561339:vpc/vpc-099ff8a885e6d70d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ce644bc5596f8e7",
            "default_route_table_id": "rtb-0f46654638a471147",
            "default_security_group_id": "sg-05ca0d68e75641054",
            "dhcp_options_id": "dopt-02245216da2fd32f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099ff8a885e6d70d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f46654638a471147",
            "owner_id": "286571561339",
            "tags": {
              "Name": "VExpenses-william-vpc"
            },
            "tags_all": {
              "Name": "VExpenses-william-vpc"
            }
          }
        }
      ]
    }
  ]
}